# interns_ai_ml_assignments

./: README.md  assignment week1 day 1.ipynb  assignment-1.ipynb  week 1  week-1 day-2 assignment - Jupyter Notebook.html
Credit-risk-scoring/: main.py  streamlit_app.py  test_predict.py
Credit-risk-scoring/data/: credit_risk_scoring_dataset.csv
Credit-risk-scoring/logs/: credit_risk_model.pkl
Credit-risk-scoring/notebooks/: credit_risk_scoring.ipynb
Credit-risk-scoring/src/: data_loader.py  data_validation.py  model.py  predict.py
INT2026-1467/week 0/: README.md  assigment1.ipynb
Mini Project_Kaggle-Style ML Challenge/: README.md  miniproject_notebook.ipynb  miniproject_report.ipynb  notebook.ipynb
Mini-Project-2/: resume_screening_model.pkl  role_model.pkl
Miniproject 2/: Miniproject2_notebook.ipynb  README.md  Report.ipynb
WEEK 1/: DAY 1 assigment.ipynb
Week1/Day-3/: Readme.md  (+2 more)
day-3-assignment-3/: assignment3.ipynb
mini prjoject/: README.md
mini_project/: README.md  miniproject_report.docx  proj.ipynb
mini_project2/: README.md  miniproject_notebook.ipynb  projectreport.md
week 2/: week 2-day 1 assignment  week 2-day 1 assignment .py  week2 day2 assignment 1.py
week-0/: README.md  week-0-day-1-assignment-1.ipynb
week-1/: README  assignment-1.ipynb
week-2/: day-1-assignment .ipynb
week-4/: CELL 1 TO 6.txt  README.md  house_prices_feature_engineering.ipynb
week-4/day-5/Mini-Project/: Aqiprediction.ipynb  README.md  columns.pkl  main.py  pyproject.toml
week-5/: PROJECT REPORT.docx  README.md  batch_predict.py
week-6/: README.md
(+619 files in other folders)
